force-app/main/default/objects/L_PR_Course_Parent_Opportunity_Relation__c/L_PR_Course_Parent_Opportunity_Relation__c.object-meta.xml
<CustomObject>
    <label>Course/Opportunity Relationship</label>
    <nameField>
        <displayFormat>CPO-{000000}</displayFormat>
        <label>Course/Opportunity Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course/Opportunity Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>