force-app/main/default/objects/L_PR_Course_Parent_Opportunity_Relation__c/fields/L_PR_Course_Instance__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Course_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Instance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CourseInstance__c.L_AD_CourseParent__c</field>
            <operation>equals</operation>
            <valueField>$Source.L_PR_Course_Parent_Id__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CourseInstance__c</referenceTo>
    <relationshipLabel>Course/Opportunity Relationship</relationshipLabel>
    <relationshipName>Course_Parent_Opportunity_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>