force-app/main/default/objects/L_PR_Course_Parent_Opportunity_Relation__c/fields/L_PR_Course_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Course_Parent_Id__c</fullName>
    <label>Course Parent Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CourseParent__c.L_AD_Course_Parent_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CourseParent__c</referenceTo>
    <relationshipLabel>Course Parent Opportunity Relationship</relationshipLabel>
    <relationshipName>Course_Parent_Opportunity_Relationship</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>