force-app/main/default/objects/L_PR_Course_Parent_Opportunity_Relation__c/fields/L_PR_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Opportunity_Id__c</fullName>
    <label>Opportunity Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PRM_Opportunity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Course/Opportunity Relationships</relationshipLabel>
    <relationshipName>Course_Parent_Opportunity_Relationship</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>